reserva usuario fecha

--- a/ReservaUsuarioAsistencia.html
+++ b/ReservaUsuarioAsistencia.html
@@ -1,94 +1,72 @@
 <template x-if="pantalla=='ReservaUsuarioAsistencia'">
     <div x-data="ReservaUsuarioAsistencia()">
-        <div class="container mt-7">
-            <div class="row flex-lg-nyg-column-reverse">
-                <div class="col-12 col-lg-9">
-                    <div class="d-flex justify-content-end btn-asistieron">
-                        <span>
-                            Personas a asistir:
-                        </span>
-                        <button class="btn">
-                            <b class="color-blue" x-text="total_personas"></b>
-                            <b class="color-gray-dark" x-text="'/' + cant_personas"></b>
-                        </button>
+        <div class="container">
+            <div class="d-flex justify-content-end btn-asistieron">
+                <span>
+                    Personas a asistir:
+                </span>
+                <button class="btn">
+                    <b class="color-blue" x-text="total_personas"></b>
+                    <b class="color-gray-dark" x-text="'/' + cant_personas"></b>
+                </button>
+            </div>
+            <hr>
+            <div class="row justify-content-around fa-gray">
+                <div class="d-flex flex-column align-items-center col-6 col-sm-3">
+                    <h6 class="f-9 mt-3">Adultos</h6>
+                    <div class="d-flex align-items-center">
+                        <button class="btn btn-transparent" @click="less_persons(1)"><i
+                                class="fas fa-minus-circle fa-lg"></i></button>
+                        <span class="mx-2" x-text="form_reserva.cant_adultos">0</span>
+                        <button class="btn btn-transparent" @click="plus_persons(1)"><i
+                                class="fas fa-plus-circle fa-lg"></i></button>
                     </div>
-                    <hr>
-                    <div class="row justify-content-around fa-gray">
-                        <div class="d-flex flex-column align-items-center col-6 col-sm-3">
-                            <h6 class="f-9 mt-3">Adultos</h6>
-                            <div class="d-flex align-items-center">
-                                <button class="btn btn-transparent" @click="less_persons(1)"><i
-                                        class="fas fa-minus-circle fa-lg"></i></button>
-                                <span class="mx-2" x-text="form_reserva.cant_adultos">0</span>
-                                <button class="btn btn-transparent" @click="plus_persons(1)"><i
-                                        class="fas fa-plus-circle fa-lg"></i></button>
-                            </div>
-                        </div>
-                        <div class="d-flex flex-column align-items-center col-6 col-sm-3">
-                            <h6 class="f-9 mt-3">Menores (3 a 12 años)</h6>
-                            <div class="d-flex align-items-center">
-                                <button class="btn btn-transparent" @click="less_persons(2)"><i
-                                        class="fas fa-minus-circle fa-lg"></i></button>
-                                <span class="mx-2" x-text="form_reserva.cant_tres_doce">0</span>
-                                <button class="btn btn-transparent" @click="plus_persons(2)"><i
-                                        class="fas fa-plus-circle fa-lg"></i></button>
-                            </div>
-                        </div>
-                        <div class="d-flex flex-column align-items-center col-6 col-sm-3">
-                            <h6 class="f-9 mt-3">Niños (1 a 3 años)</h6>
-                            <div class="d-flex align-items-center">
-                                <button class="btn btn-transparent" @click="less_persons(3)"><i
-                                        class="fas fa-minus-circle fa-lg"></i></button>
-                                <span class="mx-2" x-text="form_reserva.cant_uno_tres">0</span>
-                                <button class="btn btn-transparent" @click="plus_persons(3)"><i
-                                        class="fas fa-plus-circle fa-lg"></i></button>
-                            </div>
-                        </div>
-                        <div class="d-flex flex-column align-items-center col-6 col-sm-3">
-                            <h6 class="f-9 mt-3">Bebés</h6>
-                            <div class="d-flex align-items-center">
-                                <button class="btn btn-transparent" @click="less_persons(5)"><i
-                                        class="fas fa-minus-circle fa-lg"></i></button>
-                                <span class="mx-2" x-text="form_reserva.cant_bebes">0</span>
-                                <button class="btn btn-transparent" @click="plus_persons(5)"><i
-                                        class="fas fa-plus-circle fa-lg"></i></button>
-                            </div>
-                        </div>
+                </div>
+                <div class="d-flex flex-column align-items-center col-6 col-sm-3">
+                    <h6 class="f-9 mt-3">Menores (3 a 12 años)</h6>
+                    <div class="d-flex align-items-center">
+                        <button class="btn btn-transparent" @click="less_persons(2)"><i
+                                class="fas fa-minus-circle fa-lg"></i></button>
+                        <span class="mx-2" x-text="form_reserva.cant_tres_doce">0</span>
+                        <button class="btn btn-transparent" @click="plus_persons(2)"><i
+                                class="fas fa-plus-circle fa-lg"></i></button>
                     </div>
-
-                    <div class="container mt-5">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="form-group">
-                                    <label class="form-label">Comentarios</label>
-                                    <textarea cols="30" rows="10" class="form-control h-6r"></textarea>
-                                </div>
-                            </div>
-                        </div>
+                </div>
+                <div class="d-flex flex-column align-items-center col-6 col-sm-3">
+                    <h6 class="f-9 mt-3">Niños (1 a 3 años)</h6>
+                    <div class="d-flex align-items-center">
+                        <button class="btn btn-transparent" @click="less_persons(3)"><i
+                                class="fas fa-minus-circle fa-lg"></i></button>
+                        <span class="mx-2" x-text="form_reserva.cant_uno_tres">0</span>
+                        <button class="btn btn-transparent" @click="plus_persons(3)"><i
+                                class="fas fa-plus-circle fa-lg"></i></button>
                     </div>
-
-
-                    <div class="container mt-3">
-                        <div class="d-flex">
-                            <button class="btn btn-next-extra" @click="next_asistencia()"><span>Siguiente</span> <i
-                                    class="fas fa-arrow-alt-circle-right f-12 position-relative"
-                                    style="top: 0.1rem;"></i></button>
+                </div>
+                <div class="d-flex flex-column align-items-center col-6 col-sm-3">
+                    <h6 class="f-9 mt-3">Bebés</h6>
+                    <div class="d-flex align-items-center">
+                        <button class="btn btn-transparent" @click="less_persons(5)"><i
+                                class="fas fa-minus-circle fa-lg"></i></button>
+                        <span class="mx-2" x-text="form_reserva.cant_bebes">0</span>
+                        <button class="btn btn-transparent" @click="plus_persons(5)"><i
+                                class="fas fa-plus-circle fa-lg"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label class="form-label">Comentarios</label>
+                            <textarea cols="30" rows="10" class="form-control h-6r"></textarea>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                        <button class="navbar-toggler btn-toggle-nyg" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <i class="fas fa-list"></i>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <div class="d-flex flex-column align-items-between border mt-2 w-100">
-                                <div class="contenido"></div>
-                            </div>
-                        </div>
-                    </nav>
+            </div>
+            <div class="container mt-3">
+                <div class="d-flex">
+                    <button class="btn btn-next-extra" @click="next_asistencia()"><span>Siguiente</span> <i
+                            class="fas fa-arrow-alt-circle-right f-12 position-relative" style="top: 0.1rem;"></i></button>
                 </div>
             </div>
         </div>
@@ -101,7 +79,6 @@
             botes: [],
             total_personas: 0,
             init() {
-                // alert(this.cant_personas)
                 let url = this.base_url + '/BoatsLaravel/public/reserva/barco_detalles'
                 axios.post(url, { id: this.form_reserva.id_vote }).then(res => {
 
@@ -165,9 +142,9 @@
                 }
             },
             next_asistencia() {
-                if(this.form_reserva.cant_adultos == 0 ) {
+                if (this.form_reserva.cant_adultos == 0) {
                     Swal.fire('', 'Debe ir por lo menos un adulto', 'error')
-                }else {
+                } else {
                     this.pantalla = 'ReservaUsuarioExtra'
                 }
             }
